--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "global": "^4.4.0",
     "gsap": "^3.13.0",
@@ -83,6 +84,7 @@
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
