chore: disabled old wf

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ _ReSharper*/
 # Developer Notes
 # This file is used to ignore files that should not be tracked by Git.
 APE-Notes.txt
+blog-generator.disable.ym_
