--- a/.github/workflows/blog-generator.yml
+++ b/.github/workflows/blog-generator.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * 1'   # Every Monday at 00:00 UTC
   workflow_dispatch:       # Manual trigger option
 
+permissions:
+  contents: write         # Needed to commit & push new files
+
 jobs:
   build:
     runs-on: ubuntu-latest
