chore: update to netlify workflow

--- a/public/admin/config.yaml
+++ b/public/admin/config.yaml
@@ -2,5 +2,21 @@ backend:
   name: github
   repo: jcmangubat/ladonco.web
   branch: main
+  site_domain: ladonco.ph
+  base_url: https://ladonco.ph
+  auth_scope: repo
+
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
+
+collections:
+  - name: "blog"
+    label: "Blog"
+    folder: "src/content/posts"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { name: "title", label: "Title" }
+      - { name: "date", label: "Date", widget: "datetime" }
+      - { name: "description", label: "Description", widget: "text" }
+      - { name: "body", label: "Body", widget: "markdown" }
