--- a/.github/workflows/blog-generator.yml
+++ b/.github/workflows/blog-generator.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add src/pages/posts/*.md
+          git add src/contents/posts/*.md
           git commit -m "chore: weekly article update [skip ci]" || echo "No changes"
           git push
