feat: Implementing blog and article engines + automation thru workflow + user experience;

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "global": "^4.4.0",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "highlight.js": "^11.9.0",
     "input-otp": "^1.2.4",
@@ -82,7 +83,6 @@
     "lg-zoom": "^1.3.0",
     "lightgallery": "^2.9.0-beta.1",
     "lucide-react": "^0.462.0",
-    "marked": "^12.0.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^2.7.0",
     "react": "^18.3.1",
@@ -100,6 +100,7 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^2.12.7",
     "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "slugify": "^1.6.6",
     "sonner": "^1.5.0",
     "swiper": "^11.2.10",
