--- a/.github/workflows/blog-generator.yml
+++ b/.github/workflows/blog-generator.yml
@@ -35,5 +35,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/contents/posts/*.md
-          git commit -m "chore: weekly article update [skip ci]" || echo "No changes"
+          git add public/contents/posts/images/*.png
+          git add public/contents/blogs-catalog.json
+          git commit -m "chore: weekly article + image update [skip ci]" || echo "No changes"
           git push
