--- a/.github/workflows/blog-generator.yml
+++ b/.github/workflows/blog-generator.yml
@@ -15,6 +15,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -37,5 +45,5 @@ jobs:
           git add public/contents/posts/*.md
           git add public/contents/posts/images/*.png
           git add public/contents/blogs-catalog.json
-          git commit -m "chore: weekly article + image update [skip ci]" || echo "No changes"
+          git commit -m "chore: weekly article + image update" || echo "No changes"
           git push
