--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^7.0.5",
     "vite-plugin-babel": "^1.3.2",
-    "vite-plugin-glsl": "^1.5.1"
+    "vite-plugin-glsl": "^1.5.1",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
