feat: Add Blog Comments feature with Firebase integration
- Added Firebase as a dependency for real-time comments functionality.
- Implemented BlogComments component to handle user comments, replies, likes, and editing.
- Integrated BlogComments into BlogDetailsPage for displaying and posting comments.
- Updated BlogDetailsPage to include social sharing options for articles.
- Enhanced styling for BlogDetailsPage with custom hover effects.
- Minor adjustments to CTASection for improved layout.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.1",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.6",
     "global": "^4.4.0",
     "gray-matter": "^4.0.3",
